# haskell-playground

./: haskell-playground.cabal
app/: Main.hs  ParseSql.hs
katas/: ApplicativeParser.hs  ChurchNumbers.hs  Lenses.hs  ListAsFolds.hs  ListAsFoldsPreload.hs  ListsAsFolds.hs  ListsAsFoldsPreload.hs  Monads.hs  MostImperativeLanguage.hs  ProveIt.hs  ProveIt1.hs  RandomEasyOnes.hs  RegexParser.hs  Scott.hs  SimpleLens.hs  SmallestPossibleSum.hs
katas-tests/: ApplicativeParserSpec.hs  ListsAsFoldsSpec.hs  Main.hs  RegexParserSpec.hs  SmallestPossibleSumSpec.hs
