cabal-version: 3.8
name: haskell-playground
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-playground
    import: warnings
    main-is: Main.hs
    other-modules: ParseSql
    build-depends: base ^>=4.14.3.0
    hs-source-dirs: app
    default-language: Haskell2010

-- Codewars katas

library haskell-katas
    import: warnings
    exposed-modules: SmallestPossibleSum
                   , RandomEasyOnes
    build-depends: base ^>=4.14.3.0
    hs-source-dirs: katas
    default-language: Haskell2010

test-suite haskell-katas-tests
    import: warnings
    main-is: Main.hs
    other-modules: 
        SmallestPossibleSumSpec,
        SmallestPossibleSum,
        AssemblerInterpreterSpec,
        AssemblerInterpreter,
    build-depends: 
        base ^>=4.14.3.0,
        hspec ^>=2.10.1,
    hs-source-dirs: katas-tests katas
    default-language: Haskell2010
