cabal-version: 3.6
name: haskell-playground
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-playground
    import: warnings
    main-is: Main.hs
    other-modules: ParseSql
    build-depends: base ^>=4.14
    hs-source-dirs: app
    default-language: Haskell2010

-- Codewars katas

library haskell-katas
    import: warnings
    exposed-modules: SmallestPossibleSum
                   , RandomEasyOnes
                   , RegexParser
    build-depends: base ^>=4.14
    hs-source-dirs: katas
    default-language: Haskell2010

executable tests
    import: warnings
    main-is: Main.hs
    other-modules: 
        RegexParserSpec,
        RegexParser,
        SmallestPossibleSumSpec,
        SmallestPossibleSum,
        ListsAsFoldsSpec,
        ListsAsFoldsPreload,
        ListsAsFolds,
    build-depends: 
        base ^>=4.14,
        hspec ^>=2.10.1,
    hs-source-dirs: katas-tests katas
    default-language: Haskell2010
